<resources>

    <string name="app_name">Get</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_splash">Splash</string>
    <string name="title_activity_message">message</string>
    <string name="title_activity_tab">TabActivity</string>

    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="title_activity_login">login</string>
    <string name="title_activity_camera">Camera</string>


    <string name="number_string"> رقم الهاتف</string>
    <string name="name_string">اسم المستخدم</string>
    <string name="password_string">كلمة المرور </string>
    <string name="repassword_string"> تأكيد كلمة المرور </string>
    <string name="title_string">إنشاء حساب</string>
    <string name="create_string">إنشاء حساب </string>
    <string name="login_string">تسجيل الدخول</string>
    <string name="forget_string">هل نسيت كلمة المرور؟</string>
    <string name="newuser_string">ليس لديك حساب؟ أنشأ حسابك</string>
    <string name="city_string"> المحافظة</string>
    <string name="address_string"> العنوان التفصيلي</string>
    <string name="code_string">رمز التفعيل</string>
    <string name="confirm_string">تـأكـيـد</string>
    <string name="splash_string">تسوق من المنزل بسهولة</string>
    <string name="splash2_title">طلبك سيصل إليك أينما كنت</string>
    <string name="splash3_title">عروض مميزة بانتظارك</string>
    <string name="home_newproducts">أحدث المنتجات</string>
    <string name="home_shops">المتاجر</string>
    <string name="search_string">البحث</string>
    <string name="offer_search_string">ابحث عن عروضك المفضلة</string>
    <string name="_9_41_pm_string">9:41 PM</string>
    <string name="product_name">Nike React Infinity</string>
    <string name="product_title">حذاء رجالي</string>
    <string name="product_salary"> السعر: 100.000  ل.س</string>
    <string name="what_you_see_is_what_you_get__string">What you see is what you GET!</string>
    <string name="description_string">Lorem ipsum dolor sit amet, consectetuer adipiscing elit,sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.Ut wisi enim ad minim veniam</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="arabic">لا يوجد ماهو ملموس ولكن الواحد بدو يعمل كذا شغلة لحتى يقدر يأمن حالو بس الوضع مخنوق ولازم نعتمد ونتعب وأزمة وبتمر</string>
    <string name="title_home">الرئيسية</string>
    <string name="title_cart">السلة</string>
    <string name="title_shops">المتاجر</string>
    <string name="title_offers">العروض</string>
    <string name="title_categories">التصنيفات</string>
    <string name="title_adidias">أديداس</string>
    <string name="title_nike">نايك</string>
    <string name="title_under">أندر أرمار</string>
    <string name="title_zara">زارا</string>
    <string name="title_notifications">الإشعارات</string>
    <string name="title_carts">سلة المشتريات</string>
    <string name="title_orders">طلباتي</string>
    <string name="title_favorite">المفضلة</string>
    <string name="productCart_title">حذاء رجالي</string>
    <string name="productCart_delete">إزالة من السلة</string>
    <string name="productOrder_delete">إلغاء الحجز</string>
    <string name="productfavorite_delete">إزالة من المفضلة</string>
    <string name="productfavorite_details">تفاصيل المنتح</string>
    <string name="productCart_totalPrice">المبلغ الكلي</string>
    <string name="productCart_totalnewPrice"> بعد الحسم</string>
    <string name="totalPrice_number">172.000 ل.س</string>
    <string name="cartDelivery_text">التوصيل</string>
    <string name="cartDeliveryPrice_text">2000  ل.س</string>
    <string name="productsPrice_text">الإجمالي</string>
    <string name="productsPrice_number">170.000 ل.س</string>
    <string name="button_confirm">تأكيد الطلب</string>
    <string name="button_addtocart">إضافة للسلة</string>
    <string name="title_activity_settings">settings</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="title_code">أدخل رمز التحقق الذي قمنا بإرساله إلى الرقم الذي أدخلته</string>
    <string name="title_forget">أدخل رقم الهاتف لنقوم بتأكيد الحساب الخاص بك</string>
    <string name="title_resetpassword">أدخل كلمة المرور الجديدة وتأكيدها</string>
    <string name="order_status_cancel">إلغاء الطلب</string>
    <string name="order_status_underway">قيد التوصيل</string>
    <string name="order_status_delivered">تم التوصيل</string>
    <string name="order_id">رقم الطلبية:  </string>
    <string name="order_date">تاريخ الطلبية:  </string>
    <string name="order_shipped_date">تاريخ الشحن:  </string>

</resources>
