<androidx.drawerlayout.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:openDrawer="start">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <RelativeLayout
            android:id="@+id/content_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent" >


        <RelativeLayout
           android:layout_width="match_parent"
           android:layout_height="match_parent"
            android:gravity="bottom|center">



            <RelativeLayout android:id="@+id/get_logo"
                android:layout_marginTop="40dp"
                android:layout_centerHorizontal="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:ignore="RtlCompat">


                <TextView android:id="@+id/cart_titile"
                    android:textStyle="bold"
                    android:textSize="25sp"
                    android:textColor="@color/_________color"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/title_carts"/>


            </RelativeLayout>

            <TextView
                android:id="@+id/hintText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="لا يوجد منتجات في السلة!"
                android:textSize="18sp"
                android:gravity="center"
                android:textColor="@color/text_shadow"
                android:layout_below="@+id/get_logo"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="100dp"
                android:visibility="invisible"/>

            <RelativeLayout android:id="@+id/slide"
                android:layout_marginTop="52dp"
                android:layout_alignParentRight="true"
                android:layout_marginRight="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:ignore="RtlCompat">

                <ImageView
                    android:id="@+id/slide_image1"
                    android:src="@drawable/line_slider"
                    android:layout_width="30dp"
                    android:layout_height="7dp" />

                <ImageView
                    android:id="@+id/slide_image2"
                    android:layout_below="@+id/slide_image1"
                    android:src="@drawable/line_slider"
                    android:layout_width="30dp"
                    android:layout_height="7dp" />

                <ImageView
                    android:id="@+id/slide_image3"
                    android:layout_below="@+id/slide_image2"
                    android:src="@drawable/line_slider"
                    android:layout_width="30dp"
                    android:layout_height="7dp" />


            </RelativeLayout>

            <RelativeLayout android:id="@+id/cart"
                android:layout_marginTop="35dp"
                android:layout_alignParentLeft="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:ignore="RtlCompat">

                <TextView android:id="@+id/cart_count"
                    android:textStyle="bold"
                    android:textSize="20sp"
                    android:textColor="@color/design_default_color_error"
                    android:layout_marginLeft="10dp"
                    android:layout_width="50dp"
                    android:layout_height="20dp"
                    android:gravity="center" />

                <ImageView android:id="@+id/cart_image"
                    android:src="@raw/mcart"
                    android:foregroundGravity="center"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="10dp"
                    android:layout_width="60dp"
                    android:layout_height="30dp" />

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/Lmain"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="90dp"
                android:orientation="vertical">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recyclerView_productCart"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </RelativeLayout>


            <RelativeLayout
                android:id="@+id/cart_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/Lmain"
                android:layout_alignParentBottom="true"
                android:layout_marginTop="0dp"
                android:layout_marginBottom="0dp"
                android:gravity="bottom"
                tools:ignore="RtlCompat">


                <TextView
                    android:id="@+id/totalPrice_text"
                    android:layout_width="92dp"
                    android:layout_height="28dp"
                    android:layout_alignParentRight="true"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="20dp"
                    android:text="@string/productCart_totalPrice"
                    android:textColor="@color/_________color"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/totalPrice_number"
                    android:layout_width="200dp"
                    android:layout_height="28dp"
                    android:layout_alignParentLeft="true"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="10dp"
                    android:gravity="left"
                    android:textColor="@color/_________color"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/totalnewPrice_text"
                    android:layout_width="120dp"
                    android:layout_height="28dp"
                    android:layout_alignParentRight="true"
                    android:layout_marginTop="50dp"
                    android:layout_marginRight="20dp"
                    android:fontFamily="Cairo"
                    android:text="@string/productCart_totalnewPrice"
                    android:textColor="@color/design_default_color_error"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:visibility="invisible"/>

                <TextView
                    android:id="@+id/totalnewPrice_number"
                    android:layout_width="200dp"
                    android:layout_height="28dp"
                    android:layout_alignParentLeft="true"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="50dp"
                    android:fontFamily="Cairo"
                    android:gravity="left"
                    android:textColor="@color/design_default_color_error"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:visibility="invisible"/>


                <ImageView
                    android:id="@+id/line_12"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="90dp"
                    android:contentDescription="line_12"
                    android:src="@drawable/line_12" />


                <Button
                    android:id="@+id/button"
                    android:layout_width="324dp"
                    android:layout_height="40dp"
                    android:layout_alignParentBottom="true"
                    android:layout_gravity="center|bottom"
                    android:layout_marginLeft="40dp"
                    android:layout_marginTop="110dp"
                    android:background="@drawable/buttom_cart_box"
                    android:text="@string/button_confirm"
                    android:textColor="@color/text_shadow_white"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:visibility="invisible"/>

                <Button
                    android:id="@+id/button1"
                    android:layout_width="200dp"
                    android:layout_height="40dp"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="20dp"
                    android:layout_marginTop="110dp"
                    android:layout_centerHorizontal="true"
                    android:background="@drawable/buttom_cart_box"
                    android:text="@string/button_confirm"
                    android:textColor="@color/text_shadow_white"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:visibility="visible"/>

                <Button
                    android:id="@+id/code"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:layout_alignParentLeft="true"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="110dp"
                    android:text="كود الحسم"
                    android:background="@drawable/buttom_cart_box"
                    android:gravity="center"
                    android:textColor="@color/text_shadow_white"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    android:visibility="visible"/>


            </RelativeLayout>

        </RelativeLayout>

        </RelativeLayout>

    </ScrollView>

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/navigation_drawer"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:background="@color/home_color_2"
        app:headerLayout="@layout/nav_header"
        app:menu="@menu/drawer_view"
        app:theme="@style/YourStyle"
        android:layout_gravity="end"
        app:itemTextColor="@drawable/navigation_drawer_color"
        app:itemIconTint="@drawable/navigation_drawer_color"/>

</androidx.drawerlayout.widget.DrawerLayout>